Attempt to fix squished buttons

--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,8 @@
 }
 
 .button{
+  width: 50px;
+  height: 20px;
   font-size: 25px;
   font-family: Helvetica, sans-serif;
 }
